S03P31D104-13 | updated Calendar Design

--- a/front/src/assets/css/reset.css
+++ b/front/src/assets/css/reset.css
@@ -3,11 +3,14 @@
    License: none (public domain)
 */
 html {
+	width: 100%;
 	height: 100%;
 }
 body {
-	min-height: 100vh;
+	min-height: 100%;
+	background: #e9ecef;
 }
+
 
 
 html, body, div, span, applet, object, iframe,
